import Marcador from "./marcador";

export default class Etiqueta extends Marcador{
    constructor(nombre: string){
        super(nombre);
    }
}